# automatedTesting

./: README.md  pyproject.toml
.github/workflows/: publish-titanic-pckg.yml  pytest_titanic.yml
scripts/: download_data.py
tests/: test_analysis_notebook.py  test_data_download_script.py  test_utils.py
